--- a/clients/android/app/src/main/res/layout/fragment_image_viewer.xml
+++ b/clients/android/app/src/main/res/layout/fragment_image_viewer.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-
     <com.ortiz.touchview.TouchImageView
         android:id="@+id/image_viewer"
         android:layout_width="match_parent"
@@ -27,9 +26,7 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/image_view_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/imagePdfToolbarColor"
-            android:minHeight="?attr/actionBarSize"/>
+            android:layout_height="?attr/actionBarSize" />
 
     </FrameLayout>
 
