--- a/clients/android/app/src/main/res/layout/splash_screen.xml
+++ b/clients/android/app/src/main/res/layout/splash_screen.xml
@@ -5,21 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ProgressBar
-        android:id="@+id/migrate_progress_bar"
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:indeterminate="true"
-        android:minHeight="20dp"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/splash_screen_image" />
-
-    <TextView
+    <com.google.android.material.textview.MaterialTextView
         android:id="@+id/splash_screen_text"
-        style="@style/Main.Text.Headline"
+        style="@style/TextAppearance.Material3.HeadlineLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/lockbook_title"
@@ -28,7 +16,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed" />
-
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/splash_screen_image"
