--- a/clients/android/app/src/main/res/drawable/ic_eraser_outline.xml
+++ b/clients/android/app/src/main/res/drawable/ic_eraser_outline.xml
@@ -1,18 +1,15 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="37dp"
-    android:height="37dp"
+    android:width="24dp"
+    android:height="24dp"
     android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:viewportHeight="24"
+    android:tint="#000000">
   <path
       android:pathData="M4,14l5,5h2l7,-7 3,-3 -6,-6 -3,3 -8,8z"
-      android:strokeLineJoin="round"
-      android:strokeWidth="2"
-      android:strokeColor="@color/colorPrimary"
-      android:strokeLineCap="round"/>
+      android:strokeColor="@android:color/white"
+      android:strokeWidth="2" />
   <path
       android:pathData="M18,12l-6,-6"
-      android:strokeLineJoin="round"
-      android:strokeWidth="2"
-      android:strokeColor="@color/colorPrimary"
-      android:strokeLineCap="round"/>
+      android:strokeColor="@android:color/white"
+      android:strokeWidth="2" />
 </vector>
