--- a/clients/android/app/src/main/res/layout-land/fabs_new_file.xml
+++ b/clients/android/app/src/main/res/layout-land/fabs_new_file.xml
@@ -10,23 +10,30 @@
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/list_files_fab_drawing"
-        style="@style/Main.Widget.FAB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
         android:contentDescription="@string/list_files_create_document"
-        android:src="@drawable/ic_baseline_border_color_24"
+        android:src="@drawable/ic_baseline_draw_24"
         android:visibility="gone" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/list_files_fab_document"
-        style="@style/Main.Widget.FAB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:contentDescription="@string/list_files_create_document"
         android:src="@drawable/ic_baseline_insert_drive_file_24"
+        android:layout_margin="5dp"
+        app:layout_anchor="@id/list_files_fab_folder"
         android:visibility="gone" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/list_files_fab_folder"
-        style="@style/Main.Widget.FAB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:contentDescription="@string/list_files_create_folder"
-        android:src="@drawable/round_folder_white_18dp"
+        android:layout_margin="5dp"
+        android:src="@drawable/ic_baseline_folder_24"
         android:visibility="gone" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -35,9 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:contentDescription="@string/list_files_create_file"
-        android:src="@drawable/ic_baseline_add_24"
-        app:backgroundTint="@color/colorPrimary"
-        app:rippleColor="@color/colorPrimaryDark"
-        app:tint="@color/white" />
+        android:src="@drawable/ic_baseline_add_24"/>
+
 
 </LinearLayout>
