--- a/clients/android/app/src/main/res/layout/activity_debug.xml
+++ b/clients/android/app/src/main/res/layout/activity_debug.xml
@@ -8,12 +8,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/debug_text"
-            style="@style/Main.Text.Small"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@null"
             android:gravity="top|start"
             android:textIsSelectable="true"
             android:importantForAutofill="no" />
