--- a/clients/android/app/src/main/res/layout/dialog_create_file.xml
+++ b/clients/android/app/src/main/res/layout/dialog_create_file.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/create_file_layout"
-    style="@style/Main.Widget.Dialog"
+    style="@style/MaterialAlertDialog.Material3"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:orientation="vertical">
 
-    <TextView
+    <com.google.android.material.textview.MaterialTextView
         android:id="@+id/create_file_title"
-        style="@style/Main.Text.Medium"
+        style="@style/TextAppearance.Material3.TitleMedium"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="sans-serif"
         android:paddingTop="8dp"
         android:text="@string/new_file_title"
         android:textAlignment="center" />
@@ -20,16 +19,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="4dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginRight="4dp"
-        android:layout_marginBottom="4dp"
+        android:padding="10dp"
         android:gravity="end"
         android:orientation="horizontal">
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/create_file_text_part"
-            style="@style/Main.Text.Small"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
@@ -39,9 +34,8 @@
             android:importantForAutofill="no"
             android:inputType="text" />
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/create_file_extension"
-            style="@style/Main.Text.Small"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.4"
@@ -50,9 +44,8 @@
             android:importantForAutofill="no"
             android:inputType="text" />
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/create_file_text"
-            style="@style/Main.Text.Small"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
@@ -65,21 +58,26 @@
 
     </LinearLayout>
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="end"
         android:orientation="horizontal">
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/create_file_cancel"
-            style="@style/Main.Button.Borderless.Colored"
+            style="@style/Widget.Material3.Button.OutlinedButton"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_marginHorizontal="10dp"
             android:text="@string/cancel" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/create_file_create"
-            style="@style/Main.Button.Borderless.Colored"
+            style="@style/Widget.Material3.Button.OutlinedButton"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_marginHorizontal="10dp"
             android:text="@string/create_file_create" />
     </LinearLayout>
 
