--- a/clients/android/app/src/main/res/layout/dialog_rename_file.xml
+++ b/clients/android/app/src/main/res/layout/dialog_rename_file.xml
@@ -1,30 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/rename_file_layout"
-    style="@style/Main.Widget.Dialog"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:orientation="vertical">
 
-    <TextView
-        style="@style/Main.Text.Medium"
+    <com.google.android.material.textview.MaterialTextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="sans-serif"
+        style="@style/TextAppearance.Material3.TitleMedium"
         android:paddingTop="8dp"
         android:text="@string/dialog_rename_file_title"
         android:textAlignment="center" />
 
-    <EditText
+    <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/rename_file"
-        style="@style/Main.Text.Small"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="4dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginRight="4dp"
-        android:layout_marginBottom="4dp"
+        android:layout_margin="7dp"
         android:hint="@string/dialog_file_name"
         android:imeOptions="actionDone"
         android:importantForAutofill="no"
@@ -36,15 +30,22 @@
         android:gravity="end"
         android:orientation="horizontal">
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/rename_file_cancel"
-            style="@style/Main.Button.Borderless.Colored"
+            style="@style/Widget.Material3.Button.OutlinedButton"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_marginHorizontal="10dp"
             android:text="@string/cancel" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/rename_file_rename"
-            style="@style/Main.Button.Borderless.Colored"
+            style="@style/Widget.Material3.Button.OutlinedButton"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_marginHorizontal="10dp"
             android:text="@string/rename_file_rename" />
+
     </LinearLayout>
 
 
