--- a/clients/android/app/src/main/res/layout/fragment_loading_screen.xml
+++ b/clients/android/app/src/main/res/layout/fragment_loading_screen.xml
@@ -4,14 +4,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ProgressBar
+    <com.google.android.material.progressindicator.LinearProgressIndicator
         android:id="@+id/progress_bar"
-        style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryDark"
-        android:indeterminate="true"
-        android:minHeight="20dp"
-        android:translationZ="2dp" />
+        android:layout_height="20dp"
+        android:paddingTop="10dp"
+        android:indeterminate="true" />
 
 </LinearLayout>
