--- a/clients/android/app/src/main/res/layout/fragment_on_boarding_create_account.xml
+++ b/clients/android/app/src/main/res/layout/fragment_on_boarding_create_account.xml
@@ -6,21 +6,22 @@
     android:orientation="vertical"
     android:paddingHorizontal="25dp">
 
-    <EditText
+    <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/on_boarding_username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:fontFamily="monospace"
         android:hint="@string/new_account_username"
         android:imeOptions="actionDone"
         android:importantForAutofill="no"
         android:inputType="textVisiblePassword"
         android:layout_marginTop="20dp" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/on_boarding_create_submit"
-        style="@style/Main.Button.Borderless.Colored"
+        style="@style/Widget.Material3.Button.ElevatedButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="@string/create_account" />
 
 </LinearLayout>
