--- a/clients/android/app/src/main/res/layout/sheet_before_you_start.xml
+++ b/clients/android/app/src/main/res/layout/sheet_before_you_start.xml
@@ -1,23 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="20dp"
-    android:background="@color/bottomSheetBackgroundColor"
-    tools:ignore="Overdraw" >
+    android:padding="20dp" >
 
-    <TextView
+    <com.google.android.material.textview.MaterialTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/Main.Title"
+        style="@style/TextAppearance.Material3.LabelLarge"
         android:text="@string/before_you_start" />
 
-    <TextView
+    <com.google.android.material.textview.MaterialTextView
         android:id="@+id/before_you_start_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        style="@style/TextAppearance.Material3.BodySmall"
         android:paddingVertical="20dp"
         android:text="@string/before_you_start_description"/>
 
