--- a/clients/android/app/src/main/res/values/reg-colors.xml
+++ b/clients/android/app/src/main/res/values/reg-colors.xml
@@ -1,20 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="blue">#4069B0</color>
-<!--    <color name="green">#5EB75C</color>-->
-    <color name="indigo">#4F54A1</color>
-<!--    <color name="orange">#F18F31</color>-->
-<!--    <color name="pink">#EA3E50</color>-->
-<!--    <color name="purple">#83559F</color>-->
-    <color name="red">#EB4237</color>
-<!--    <color name="teal">#6FC1EE</color>-->
-<!--    <color name="yellow">#F9C83F</color>-->
-    <color name="dark">#3F3F41</color>
-    <color name="black">#181818</color>
-    <color name="light">#E3E5EB</color>
-    <color name="white">#FFFFFF</color>
-    <color name="grey">#787878</color>
-    <color name="lightBlack">#222222</color>
+    <color name="md_theme_light_primary">#2F5DA8</color>
+    <color name="md_theme_light_onPrimary">#FFFFFF</color>
+    <color name="md_theme_light_primaryContainer">#D7E2FF</color>
+    <color name="md_theme_light_onPrimaryContainer">#001A40</color>
+    <color name="md_theme_light_secondary">#565E71</color>
+    <color name="md_theme_light_onSecondary">#FFFFFF</color>
+    <color name="md_theme_light_secondaryContainer">#DAE2F9</color>
+    <color name="md_theme_light_onSecondaryContainer">#131C2C</color>
+    <color name="md_theme_light_tertiary">#705574</color>
+    <color name="md_theme_light_onTertiary">#FFFFFF</color>
+    <color name="md_theme_light_tertiaryContainer">#FBD7FC</color>
+    <color name="md_theme_light_onTertiaryContainer">#29132E</color>
+    <color name="md_theme_light_error">#BA1A1A</color>
+    <color name="md_theme_light_errorContainer">#FFDAD6</color>
+    <color name="md_theme_light_onError">#FFFFFF</color>
+    <color name="md_theme_light_onErrorContainer">#410002</color>
+    <color name="md_theme_light_background">#FEFBFF</color>
+    <color name="md_theme_light_onBackground">#1B1B1F</color>
+    <color name="md_theme_light_surface">#FEFBFF</color>
+    <color name="md_theme_light_onSurface">#1B1B1F</color>
+    <color name="md_theme_light_surfaceVariant">#E1E2EC</color>
+    <color name="md_theme_light_onSurfaceVariant">#44474E</color>
+    <color name="md_theme_light_outline">#74777F</color>
+    <color name="md_theme_light_inverseOnSurface">#F2F0F4</color>
+    <color name="md_theme_light_inverseSurface">#2F3033</color>
+    <color name="md_theme_light_inversePrimary">#ACC7FF</color>
+    <color name="md_theme_light_shadow">#000000</color>
+    <color name="md_theme_light_surfaceTint">#2F5DA8</color>
+    <color name="md_theme_light_surfaceTintColor">#2F5DA8</color>
+    <color name="seed">#4069B0</color>
+    <color name="md_theme_dark_primary">#ACC7FF</color>
+    <color name="md_theme_dark_onPrimary">#002F67</color>
+    <color name="md_theme_dark_primaryContainer">#0A458E</color>
+    <color name="md_theme_dark_onPrimaryContainer">#D7E2FF</color>
+    <color name="md_theme_dark_secondary">#BEC6DC</color>
+    <color name="md_theme_dark_onSecondary">#283041</color>
+    <color name="md_theme_dark_secondaryContainer">#3F4759</color>
+    <color name="md_theme_dark_onSecondaryContainer">#DAE2F9</color>
+    <color name="md_theme_dark_tertiary">#DEBCDF</color>
+    <color name="md_theme_dark_onTertiary">#402844</color>
+    <color name="md_theme_dark_tertiaryContainer">#573E5B</color>
+    <color name="md_theme_dark_onTertiaryContainer">#FBD7FC</color>
+    <color name="md_theme_dark_error">#FFB4AB</color>
+    <color name="md_theme_dark_errorContainer">#93000A</color>
+    <color name="md_theme_dark_onError">#690005</color>
+    <color name="md_theme_dark_onErrorContainer">#FFDAD6</color>
+    <color name="md_theme_dark_background">#1B1B1F</color>
+    <color name="md_theme_dark_onBackground">#E3E2E6</color>
+    <color name="md_theme_dark_surface">#1B1B1F</color>
+    <color name="md_theme_dark_onSurface">#E3E2E6</color>
+    <color name="md_theme_dark_surfaceVariant">#44474E</color>
+    <color name="md_theme_dark_onSurfaceVariant">#C4C6D0</color>
+    <color name="md_theme_dark_outline">#8E9099</color>
+    <color name="md_theme_dark_inverseOnSurface">#1B1B1F</color>
+    <color name="md_theme_dark_inverseSurface">#E3E2E6</color>
+    <color name="md_theme_dark_inversePrimary">#2F5DA8</color>
+    <color name="md_theme_dark_shadow">#000000</color>
+    <color name="md_theme_dark_surfaceTint">#ACC7FF</color>
+    <color name="md_theme_dark_surfaceTintColor">#ACC7FF</color>
+    <!--        ////////////////////////////////////////////////////////////////        -->
 
-    <color name="transparent">#00000000</color>
+    <color name="drawingUntouchableBackground">#787878</color>
+    <color name="drawingTouchableBackground">#FFFFFF</color>
 </resources>
