finalized onboarding and import screen

--- a/clients/android/app/src/main/res/layout/activity_import_account.xml
+++ b/clients/android/app/src/main/res/layout/activity_import_account.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -9,17 +11,23 @@
         android:id="@+id/import_account_progress_bar"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:paddingHorizontal="20dp"/>
+        android:paddingHorizontal="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/import_info"
-        android:paddingTop="10dp"
-        android:textAlignment="center"
-        android:paddingHorizontal="70dp"
+        style="@style/TextAppearance.Material3.LabelLarge"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="50dp"
-        style="@style/TextAppearance.Material3.LabelLarge"
-        android:text="@string/import_account_starting_import"/>
+        android:layout_marginTop="10dp"
+        android:text="@string/import_account_starting_import"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/import_account_progress_bar" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
