--- a/clients/android/app/src/main/res/layout/linear_layout_file_item.xml
+++ b/clients/android/app/src/main/res/layout/linear_layout_file_item.xml
@@ -1,55 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="0dp"
     android:clickable="true"
+    android:elevation="100dp"
     android:focusable="true"
+    android:clipToPadding="false"
     android:foreground="?android:attr/selectableItemBackground"
+    android:orientation="horizontal"
     android:padding="5dp">
 
+    <ImageView
+        android:id="@+id/linear_file_icon"
+        android:layout_width="30dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="10dp"
+        android:contentDescription="@string/file_image_content_description"
+        android:src="@drawable/ic_baseline_folder_24" />
+
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:padding="5dp">
+        android:layout_weight="1"
+        android:gravity="center_vertical"
+        android:orientation="vertical"
+        android:paddingHorizontal="10dp">
 
-        <ImageView
-            android:id="@+id/linear_file_icon"
-            android:layout_width="30dp"
-            android:layout_height="50dp"
-            android:src="@drawable/ic_baseline_folder_24"
-            android:layout_marginEnd="10dp"
-            android:contentDescription="@string/file_image_content_description"/>
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/linear_file_name"
+            style="@style/TextAppearance.Material3.LabelLarge"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:text="Apple" />
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center_vertical"
-            android:orientation="vertical"
-            android:paddingHorizontal="10dp" >
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/linear_file_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                style="@style/TextAppearance.Material3.LabelLarge"
-                android:maxLines="1"
-                android:ellipsize="end"
-                android:text="Apple"
-                android:layout_marginBottom="5dp"/>
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/linear_file_description"
-                android:layout_width="match_parent"
-                android:text="cookie"
-                style="@style/TextAppearance.Material3.BodySmall"
-                android:layout_height="wrap_content" />
-
-        </LinearLayout>
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/linear_file_description"
+            style="@style/TextAppearance.Material3.BodySmall"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="cookie" />
 
     </LinearLayout>
 
-</androidx.cardview.widget.CardView>
+</LinearLayout>
